# ollama-for-intel-gpu

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.patcher  Makefile.sync  README.md
.github/: WORKFLOWS_GUIDE.md
.github/workflows/: build-and-push.yml  build-on-submodule-update.yml  ci.yml  release.yml  submodule-sync.yml  sync-ollama.yml
ml/backend/ggml/ggml/src/ggml-sycl/: CMakeLists.txt  ggml-sycl.cpp
patches/: 0004-solar-pro.patch  0018-ggml-Add-batch-size-hint.patch  0020-ggml-No-alloc-mode.patch  0021-decode-disable-output_all.patch  0024-GPU-discovery-enhancements.patch  0026-report-LoadLibrary-failures.patch  fix-0001-ggml-update-sched-get-buffer-size.patch  fix-0002-ggml-update-sched-get-buffer-size.patch
scripts/: build_linux.sh  build_windows.ps1  patch.sh  update_ggml_sycl.py
